syntax = "proto3";

package protobuf;

message QueryRequest {
  string input = 1;
  int32 maxWords = 2;
}

message QueryResponse {
  string input = 1;
  string output = 2;
}